[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Materials/Teleport.tres" type="Material" id=2]
[ext_resource path="res://Scripts/AudioStreamPlayer.gd" type="Script" id=3]
[ext_resource path="res://Sounds/white_noise.ogg" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.25

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75
mid_height = 1.25

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 4, 4 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0.733333, 0, 0, 0 )

[sub_resource type="SphereMesh" id=3]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
throw_force = 30

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.712469, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="DeathVision" type="MeshInstance" parent="Head/Camera"]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, -1 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="ThrowPosition" type="Position3D" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.25085 )

[node name="ThrowCursor" type="MeshInstance" parent="Head/Camera/ThrowPosition"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
script = ExtResource( 3 )
